# SubAV

./: .gitignore  CMakeLists.txt  LICENSE  Lenna.sbsi  README.md  README.txt  SbYUV.cpp  SbYUV.hpp  SbYUVTool.cpp  a.out  owl_vision_poster.ovc
AVCore/: .OwlVision.cpp.swp  BitStream.cpp  BitStream.hpp  DCT.cpp  DCT.hpp  DolphinAudition.cpp  DolphinAudition.hpp  FrameSequence.cpp  FrameSequence.hpp  Huffman.cpp  Huffman.hpp  IKP.cpp  IKP.hpp  JPEG.hpp  MacaqueMixture.cpp  MacaqueMixture.hpp  MaxFOG.cpp  MaxFOG.hpp  OwlVision.cpp  OwlVision.hpp  RGB.cpp  RGB.hpp  RGBA.cpp  RGBA.hpp  SIMD.hpp  StandaloneImage.cpp  StandaloneImage.hpp  base2_lee_dct_impl.hpp  common.hpp  compile_time.hpp
AVTool/: FFmpeg.cpp  FFmpeg.hpp  Main.cpp  PPM.cpp  PPM.hpp  RFSGenerator.cpp  RFSGenerator.hpp
